--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "."
   ],
   "type": "module",
-  "main": "dist/esm/index.js",
-  "types": "dist/preview.d.ts",
+  "main": "dist/preview-element.js",
+  "types": "dist/dts/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/preview.d.ts",
+      "types": "./dist/dts/index.d.ts",
       "default": "./dist/esm/index.js"
     }
   },
@@ -28,6 +28,7 @@
     "rollup-plugin-filesize": "^9.1.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-transform-tagged-template": "^0.0.3",
+    "tslib": "^2.4.0",
     "typescript": "^4.7.3",
     "vite": "^2.9.9"
   },
