--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "name": "@tac-elements/preview",
   "packageManager": "yarn@3.2.1",
-  "workspaces": [
-    "dev",
-    "."
-  ],
+  "workspaces": ["dev", "."],
   "type": "module",
   "main": "dist/preview-element.js",
   "types": "dist/dts/index.d.ts",
@@ -29,10 +26,10 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-transform-tagged-template": "^0.0.3",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.3",
-    "vite": "^2.9.9"
+    "typescript": "^4.7.3"
   },
   "dependencies": {
+    "@fluentui/web-components": "^2.5.1",
     "@microsoft/fast-element": "^1.10.2",
     "@microsoft/fast-foundation": "^2.46.9",
     "@microsoft/fast-web-utilities": "^6.0.0"
