--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@tac-elements/fast-preview",
   "packageManager": "yarn@3.2.1",
-  "workspaces": ["dev", "."],
+  "workspaces": [
+    "dev",
+    "."
+  ],
   "type": "module",
   "main": "dist/preview-element.js",
   "types": "dist/dts/index.d.ts",
@@ -30,6 +33,7 @@
   },
   "dependencies": {
     "@fluentui/web-components": "^2.5.1",
+    "@microsoft/fast-colors": "^5.3.0",
     "@microsoft/fast-element": "^1.10.2",
     "@microsoft/fast-foundation": "^2.46.9",
     "@microsoft/fast-web-utilities": "^6.0.0"
