--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "@tac-elements/fast-preview",
-  "version": "1.0.0alpha",
+  "name": "@neutron-ui/fast-preview",
+  "version": "1.0.11-alpha",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "packageManager": "yarn@3.2.1",
-  "workspaces": ["dev", "."],
   "type": "module",
   "main": "dist/preview-element.js",
   "types": "dist/dts/index.d.ts",
@@ -34,6 +37,7 @@
     "@microsoft/fast-colors": "^5.3.0",
     "@microsoft/fast-element": "^1.10.2",
     "@microsoft/fast-foundation": "^2.46.9",
-    "@microsoft/fast-web-utilities": "^6.0.0"
+    "@microsoft/fast-web-utilities": "^6.0.0",
+    "custom-elements-manifest": "^1.0.0"
   }
 }
